--- a/.recipe/templates/backend/layout.html.twig
+++ b/.recipe/templates/backend/layout.html.twig
@@ -10,10 +10,13 @@
     <a class="icon item" id="sidebar-toggle">
         <i class="sidebar icon"></i>
     </a>
+{#    Uncomment if you use monofony/front-pack #}
+{#
     <a href="{{ path('app_frontend_homepage') }}" target="_blank" class="item">
         <i class="ui icon world"></i>
         {{ 'app.ui.view_website'|trans }}
     </a>
+#}
     {% include 'backend/_search.html.twig' %}
     {% include 'backend/_security.html.twig' %}
 {% endblock %}
