--- a/.recipe/templates/backend/index.html.twig
+++ b/.recipe/templates/backend/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'backend/layout.html.twig' %}
 
-{% import 'SyliusUiBundle:Macro:headers.html.twig' as headers %}
+{% import '@SyliusUi/Macro/headers.html.twig' as headers %}
 
 {% block title %}{{ parent() }}{{ 'sylius.ui.dashboard'|trans }}{% endblock %}
 
