--- a/.recipe/templates/backend/crud/create/_header.html.twig
+++ b/.recipe/templates/backend/crud/create/_header.html.twig
@@ -1,4 +1,4 @@
-{% import 'SyliusUiBundle:Macro:headers.html.twig' as headers %}
+{% import '@SyliusUi/Macro/headers.html.twig' as headers %}
 
 <div class="ui stackable two column grid">
     <div class="column">
