--- a/.recipe/templates/backend/crud/update.html.twig
+++ b/.recipe/templates/backend/crud/update.html.twig
@@ -1,6 +1,6 @@
 {% extends 'backend/layout.html.twig' %}
 
-{% import 'SyliusUiBundle:Macro:buttons.html.twig' as buttons %}
+{% import '@SyliusUi/Macro/buttons.html.twig' as buttons %}
 
 {% set header = configuration.vars.header|default(metadata.applicationName~'.ui.edit_'~metadata.name) %}
 
