--- a/.recipe/templates/backend/dashboard/_customers.html.twig
+++ b/.recipe/templates/backend/dashboard/_customers.html.twig
@@ -1,6 +1,6 @@
-{% import 'SyliusUiBundle:Macro:messages.html.twig' as messages %}
-{% import 'SyliusUiBundle:Macro:buttons.html.twig' as buttons %}
-{% import 'SyliusUiBundle:Macro:labels.html.twig' as labels %}
+{% import '@SyliusUi/Macro/messages.html.twig' as messages %}
+{% import '@SyliusUi/Macro/buttons.html.twig' as buttons %}
+{% import '@SyliusUi/Macro/labels.html.twig' as labels %}
 
 <h3 class="ui top attached header">{{ 'sylius.ui.new_customers'|trans }}</h3>
 <div class="ui attached segment">
