--- a/.recipe/templates/backend/crud/index.html.twig
+++ b/.recipe/templates/backend/crud/index.html.twig
@@ -5,7 +5,7 @@
 
 {% set header = configuration.vars.header|default(metadata.applicationName~'.ui.'~metadata.pluralName) %}
 
-{% block title %}{{ parent() }} {{ header|trans }}{% endblock %}
+{% block title %}{{ header|trans }} {{ parent() }}{% endblock %}
 
 {% block content %}
     {% include 'backend/crud/index/_header.html.twig' %}
