--- a/.recipe/templates/backend/admin_user/_avatar_image.html.twig
+++ b/.recipe/templates/backend/admin_user/_avatar_image.html.twig
@@ -1,7 +1,7 @@
 {% if app.user.avatar is not empty and app.user.avatar.path is not empty %}
     {% set path = vich_uploader_asset(app.user.avatar, 'file')|imagine_filter('app_backend_admin_user_avatar_thumbnail') %}
 {% else %}
-    {% set path = '//placehold.it/50x50' %}
+    {% set path = 'http://placehold.it/50x50' %}
 {% endif %}
 
 <img style="margin-right: 10px;" class="ui avatar image" src="{{ path }}">
