--- a/.recipe/templates/backend/crud/create.html.twig
+++ b/.recipe/templates/backend/crud/create.html.twig
@@ -2,7 +2,7 @@
 
 {% set header = configuration.vars.header|default(metadata.applicationName~'.ui.new_'~metadata.name) %}
 
-{% block title %}{{ parent() }} {{ header|trans }}{% endblock %}
+{% block title %}{{ header|trans }} {{ parent() }}{% endblock %}
 
 {% form_theme form 'backend/form/theme.html.twig' %}
 
