--- a/.recipe/templates/backend/layout.html.twig
+++ b/.recipe/templates/backend/layout.html.twig
@@ -1,24 +1,17 @@
 {% extends '@SyliusUi/Layout/sidebar.html.twig' %}
 
-{% block title %}AppName | {% endblock %}
+{% block title %} | AppName{% endblock %}
 
 {% block stylesheets %}
     {% include '@SyliusUi/_stylesheets.html.twig' with {'path': 'assets/backend/app.css'} %}
 {% endblock %}
 
 {% block topbar %}
-    <a class="icon item" id="sidebar-toggle">
-        <i class="sidebar icon"></i>
-    </a>
-{#    Uncomment if you use monofony/front-pack #}
-{#
-    <a href="{{ path('app_frontend_homepage') }}" target="_blank" class="item">
-        <i class="ui icon world"></i>
-        {{ 'app.ui.view_website'|trans }}
-    </a>
-#}
-    {% include 'backend/_search.html.twig' %}
-    {% include 'backend/_security.html.twig' %}
+    {{ sylius_template_event('sylius.admin.layout.topbar_left') }}
+
+    <div class="ui left floated dividing empty item"></div>
+
+    {{ sylius_template_event('sylius.admin.layout.topbar_right') }}
 {% endblock %}
 
 {% block sidebar %}
